--- a/stylesheet-team.css
+++ b/stylesheet-team.css
@@ -1,550 +1,566 @@
 body {
-  margin: 0;
-  font-family: "Arial";
+	margin: 0;
+	font-family: "Arial";
 }
 .fa {
-  margin-right: px;
-}  
+	margin-right: px;
+}
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 .clear {
-clear: left;
+	clear: left;
 }
 .head-wrap {
-  background-color: rgba(52,15,193,255);
-  height: 50px;
+	background-color: rgba(52, 15, 193, 255);
+	height: 50px;
 }
 /*gatau knpa ini gamau berubah wrna fontnya*/
-.announ  {
-  float: right;
-  color: white;
-  line-height: 25px;
-  padding: 0 80px;
-  background-color: rgba(0, 0, 0, 0.836);
+.announ {
+	float: right;
+	color: white;
+	line-height: 25px;
+	padding: 0 80px;
+	background-color: rgba(0, 0, 0, 0.836);
 }
 .announcement span {
-  color: white;
-  opacity: 0.9;
-  padding: 16px 10px 30px 90px;
-  font-size: 14px;
+	color: white;
+	opacity: 0.9;
+	padding: 16px 10px 30px 90px;
+	font-size: 14px;
 }
 /*ini yang punya announ di atas*/
 .btn {
-  padding: 3px 24px;
-  display: inline-block;
-  opacity: 0.9;
-  border-radius: 10px;
-  text-align: right;
-  margin: 9px 160px;
-  font-size: 13px;
+	padding: 3px 24px;
+	display: inline-block;
+	opacity: 0.9;
+	border-radius: 10px;
+	text-align: right;
+	margin: 9px 160px;
+	font-size: 13px;
 }
+
 .container {
-  max-width: 1024px;
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
+	max-width: 80rem;
+	padding: 0 15px;
+	margin: 0 auto;
 }
+
 header {
-  height: 120px;
-  width: 100%;
-  background-color: #4d24e0;
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  opacity: 1;
+	height: 120px;
+	width: 100%;
+	background-color: #4d24e0;
+	position: fixed;
+	top: 0;
+	z-index: 10;
+	opacity: 1;
 }
 
 .header-left {
-  float: left;
+	float: left;
 }
-.header-left img{
-  position: relative;
+.header-left img {
+	position: relative;
 }
-.heading h3{
-  float: right;
-  color: #fff;
-  top: 45px;
-  left: 125px;
-  font-size: 35px;
-  display: block;
+.heading h3 {
+	color: #fff;
+	top: 45px;
+	left: 125px;
+	font-size: 35px;
+	display: block;
 }
+
+.head-bottom {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 0 20px;
+	background-color: #4d24e0;
+	height: 70px;
+	width: s creen;
+	top: 50px;
+	z-index: 10;
+	opacity: 1;
+}
+
 .header-right {
-  float: right;
-  margin-right: -25px;
+	float: right;
+	margin-right: -25px;
 }
 .header-right a {
-  line-height: 70px;
-  color: white;
-  padding: 0 20px;
-  color: white;
-  display: block;
-  float: left;
-  transition: all 0.5s;
+	line-height: 70px;
+	color: white;
+	padding: 0 20px;
+	color: white;
+	display: block;
+	float: left;
+	transition: all 0.5s;
 }
 .header-right a:hover {
-  background-color: rgba(255, 255, 255, 0.24);
+	background-color: rgba(255, 255, 255, 0.24);
 }
 .header-right span {
-  padding: 0px 10px 0px 0px;
+	padding: 0px 10px 0px 0px;
 }
 .menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 27px 20px;
-  display:none!important;
+	color: white;
+	float: right;
+	font-size: 25px;
+	padding: 27px 20px;
+	display: none !important;
 }
 .heading {
-padding: 85px 0 30px 0;
-margin-top: 95px;
-background-size: cover;
-color: white;
-background-image: url(bghead3.png);
-position: relative;
+	padding: 85px 0 30px 0;
+	margin-top: 95px;
+	background-size: cover;
+	color: white;
+	background-image: url(bghead3.png);
+	position: relative;
 }
 
 .heading h1 {
-margin-bottom: 20px;
-text-align: left;
-width: 30%;
-display: inline-block;
+	margin-bottom: 20px;
+	text-align: left;
+	width: 30%;
+	display: inline-block;
 }
 
 .description {
-margin-bottom: 40px;
-text-align: left;
-width: 20%;
-font-size: 14px;
-opacity: 0.8;
+	margin-bottom: 40px;
+	text-align: left;
+	width: 20%;
+	font-size: 14px;
+	opacity: 0.8;
 }
 
 .announce {
-color: limegreen;
-margin-bottom: 10px;
-opacity: 0.8;
-font-weight: bold;
-font-size: 14px;
+	color: limegreen;
+	margin-bottom: 10px;
+	opacity: 0.8;
+	font-weight: bold;
+	font-size: 14px;
 }
 
 .btnb {
-padding: 12px 24px;
-color: white;
-display: inline-block;
-opacity: 0.8;
-border-radius: 6px;
-text-align: center;
+	padding: 12px 24px;
+	color: white;
+	display: inline-block;
+	opacity: 0.8;
+	border-radius: 6px;
+	text-align: center;
 }
 
 .btnb:hover {
-opacity: 1;
+	opacity: 1;
 }
 .btn-heading {
-text-align: left;
-margin: 20px 0;
-opacity: 0.8;
-margin-bottom: 100px;
+	text-align: left;
+	margin: 20px 0;
+	opacity: 0.8;
+	margin-bottom: 100px;
 }
 
 .browse {
-background: rgb(60,255,207);
-background: linear-gradient(90deg, rgba(60,255,207,1) 0%, rgba(89,254,152,1) 48%, rgba(0,255,85,1) 100%);
-color: black;
-font-weight: bold;
+	background: rgb(60, 255, 207);
+	background: linear-gradient(
+		90deg,
+		rgba(60, 255, 207, 1) 0%,
+		rgba(89, 254, 152, 1) 48%,
+		rgba(0, 255, 85, 1) 100%
+	);
+	color: black;
+	font-weight: bold;
 }
 
 .talk {
-margin-bottom: 10px;
-color: white;
-opacity: 0.6;
+	margin-bottom: 10px;
+	color: white;
+	opacity: 0.6;
 }
 
 .talk:hover {
-opacity: 1;
+	opacity: 1;
 }
 
-.product-wrapper{
-  padding-bottom: 80px;
-  padding-left: 2%;
-  padding-right: 2%;
-  background-color: #fff;;
-  text-align: center;
-  /* height: 1000px; */
-  margin:auto;
+.product-wrapper {
+	display: flex;
+	padding-bottom: 80px;
+	padding-left: 2%;
+	padding-right: 2%;
+	background-color: #fff;
+	text-align: center;
+	/* height: 1000px; */
+	margin: auto;
 }
 .head-product {
-  padding-top: 80px;
-  padding-bottom: 50px;
-  color: #242225;
+	padding-top: 80px;
+	padding-bottom: 50px;
+	color: #242225;
 }
 
 .head-product h1 {
-  font-weight: normal;
-  font-size: 100;
+	font-weight: normal;
+	font-size: 100;
 }
 
 .products {
-  display: flex;
-  /* Put a card in the next row when previous cards take all width */
-  flex-wrap: wrap;
-  
-  margin-left: -10px;
-  margin-right: -10px;
+	display: grid;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+	margin-left: -10px;
+	margin-right: -10px;
 }
 
 .product {
-  flex-basis: 20%;
-  background-color: rgb(215, 215, 219);
-  margin: 8px;
-  border: 3px solid  #fff;
-  padding: 7px 10px;
-  position:relative;
-  border-radius: 12px;
+	flex-basis: 20%;
+	background-color: rgb(215, 215, 219);
+	margin: 8px;
+	border: 3px solid #fff;
+	padding: 7px 10px;
+	position: relative;
+	border-radius: 12px;
 }
 
-.product-img{
-  height: 150px;
-  width: 100%;
-  margin-bottom: 3px;
+.product-img {
+	height: 150px;
+	width: 100%;
+
+	margin-bottom: 3px;
 }
 
-.product-content{
-  flex:1
-  
+.product-content {
 }
 
-.product-content h3{
-  color: rgb(0, 89, 255);
-  text-align: left;
-  font-size: 16px;
+.product-content h3 {
+	color: rgb(0, 89, 255);
+	text-align: left;
+	font-size: 16px;
 }
-.product-content h4{
-  position:absolute;
-  top:153px;
-  right: 10px;
-  font-size: 15px;
+.product-content h4 {
+	position: absolute;
+	top: 153px;
+	right: 10px;
+	font-size: 15px;
 }
-.product-content p{
-  margin-bottom:20px;
-  text-align: left;
+.product-content p {
+	margin-bottom: 20px;
+	text-align: left;
 }
-.star{
-  padding-right: 10px;
-  color: #e0dd24e1;
-  position:absolute;
-  top:20px;
+
+.star-wrapper {
+	padding-right: 10px;
+	position: relative;
 }
-.product-content li{
-  list-style: none;
-  float:right;
-  
-  
+
+.star {
+	position: relative;
+	bottom: 20px;
 }
-.product-content h5{
-  position:absolute;
-  top:245px;
-  color: #0e7097;
+
+.product-content li {
+	list-style: none;
+	float: right;
+}
+.product-content h5 {
+	position: absolute;
+	top: 245px;
+	color: #0e7097;
 }
 .contact-form {
-  padding-top: 100px;
+	padding-top: 100px;
 }
 
-input, textarea {
-  width: 400px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  padding: 20px;
-  font-size: 18px;
-  border: 1px solid #020d13;
+input,
+textarea {
+	width: 400px;
+	margin-top: 10px;
+	margin-bottom: 30px;
+	padding: 10px;
+	font-size: 18px;
+	border: 1px solid #020d13;
 }
 
 .contact-submit {
-  background: rgb(60,255,207);
-  background: linear-gradient(90deg, rgba(60,255,207,1) 0%, rgba(89,254,152,1) 48%, rgba(0,255,85,1) 100%);
-  color: #33294d;
-  opacity: 0.8;
-  cursor: pointer;
-  box-shadow: 0 7px #1e1c30;
-  width: 200px !important;
+	background: rgb(60, 255, 207);
+	background: linear-gradient(
+		90deg,
+		rgba(60, 255, 207, 1) 0%,
+		rgba(89, 254, 152, 1) 48%,
+		rgba(0, 255, 85, 1) 100%
+	);
+	color: #33294d;
+	opacity: 0.8;
+	cursor: pointer;
+	box-shadow: 0 7px #1e1c30;
+	width: 200px !important;
 }
-.contact-submit:hover{
-  opacity: 1;
+.contact-submit:hover {
+	opacity: 1;
 }
-.contact-submit:active{
-  position: relative;
-  top: 7px;
-  box-shadow: none;
+.contact-submit:active {
+	position: relative;
+	top: 7px;
+	box-shadow: none;
 }
 
-.footer-distributed{
-  background: #248fe0;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: left;
-  font: bold 16px sans-serif;
+.footer-distributed {
+	background: #248fe0;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
 }
 
 .footer-distributed .head-footer {
-  clear: both;
-  position: relative;
-  background-color: #2082ce;
-  width: 100%;
-  height: 70px;
-  margin: auto 0;
+	clear: both;
+	position: relative;
+	background-color: #2082ce;
+	width: 100%;
+	height: 70px;
+	margin: auto 0;
 }
 
 .footer-distributed .head-footer .subscribe {
-height: 100%;
-position: relative;
-display: flex;
-flex-direction: row;
-margin: auto 0;
+	height: 100%;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	margin: auto 0;
 }
 
 .footer-distributed .head-footer .subscribe form {
-margin: auto;
+	margin: auto;
 }
 
 .footer-distributed .head-footer .subscribe input {
-height: 20px;
-padding: 4px 10px;
-border-radius: 14px;
+	height: 20px;
+	padding: 4px 10px;
+	border-radius: 14px;
 }
 
 .footer-distributed .head-footer .subscribe input[type="email"] {
-width: 165px;
-outline-style: none;
-border-style: none;
+	width: 165px;
+	outline-style: none;
+	border-style: none;
 }
 
 .footer-distributed .head-footer .subscribe input[type="email"]:active {
-outline-style: none;
-border-style: none;
+	outline-style: none;
+	border-style: none;
 }
 
 .footer-distributed .head-footer .subscribe input[type="submit"] {
-cursor: pointer;
-width: 90px;
-height: 30px;
-box-shadow: 1px 2px 2px 2px rgb(134, 132, 132);
-outline-style: none;
-border-style: none;
-color: rgb(53, 105, 29);
-font-weight: bolder;
-font-family: 'Courier New', Courier, monospace;
+	cursor: pointer;
+	width: 90px;
+	height: 30px;
+	box-shadow: 1px 2px 2px 2px rgb(134, 132, 132);
+	outline-style: none;
+	border-style: none;
+	color: rgb(53, 105, 29);
+	font-weight: bolder;
+	font-family: "Courier New", Courier, monospace;
 }
 .footer-distributed .footer-right .subscribe input[type="submit"]:hover {
-position: relative;
-top: 2px;
-right: -1px;
-box-shadow: none;
+	position: relative;
+	top: 2px;
+	right: -1px;
+	box-shadow: none;
 }
 .footer-distributed .body-footer {
-  padding: 55px 50px;
+	padding: 55px 50px;
 }
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
-.footer-distributed .footer-right{
-  display: inline-block;
-  vertical-align: top;
+.footer-distributed .footer-right {
+	display: inline-block;
+	vertical-align: top;
 }
 
-
-.footer-distributed .footer-left{
-  width: 40%;
+.footer-distributed .footer-left {
+	width: 40%;
 }
 
 .footer-left .footer-logo {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 .footer-left .footer-logo img {
-  width: 70px;
-  height: 70px;
+	width: 70px;
+	height: 70px;
 }
 
-
-.footer-distributed h3{
-  color:  #ffffff;
-  font: normal 36px 'Open Sans', cursive;
-  margin: 0;
+.footer-distributed h3 {
+	color: #ffffff;
+	font: normal 36px "Open Sans", cursive;
+	margin: 0;
 }
 
-.footer-distributed h3 span{
-  color:  lightseagreen;
+.footer-distributed h3 span {
+	color: lightseagreen;
 }
 
-
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 20px 0 12px;
-  padding: 0;
+.footer-distributed .footer-links {
+	color: #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
 }
 
-.footer-distributed .footer-links a{
-  display:inline-block;
-  line-height: 1.8;
-font-weight:400;
-  text-decoration: none;
-  color:  inherit;
+.footer-distributed .footer-links a {
+	display: inline-block;
+	line-height: 1.8;
+	font-weight: 400;
+	text-decoration: none;
+	color: inherit;
 }
 .footer-distributed .footer-links a:hover {
-  border-bottom: 1px solid greenyellow;
+	border-bottom: 1px solid greenyellow;
 }
 
-.footer-distributed .footer-company-name{
-  color:  #222;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
+.footer-distributed .footer-company-name {
+	color: #222;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
 }
 
-
-.footer-distributed .footer-center{
-  width: 35%;
+.footer-distributed .footer-center {
+	width: 35%;
 }
 
-.footer-distributed .footer-center i{
-  background-color:  #33383b;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
+.footer-distributed .footer-center i {
+	background-color: #33383b;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
 }
 
-.footer-distributed .footer-center .mail .envelope{
-  font-size: 17px;
-  line-height: 38px;
+.footer-distributed .footer-center .mail .envelope {
+	font-size: 17px;
+	line-height: 38px;
 }
 .footer-distributed .footer-center .marker p {
-  margin-right: 8px;
+	margin-right: 8px;
 }
 .footer-distributed .footer-center .marker p::before {
-content: url(../img/icons8-marker-24.png);
-position: relative;
-top: 7px;
-right: 5px;
+	content: url(../img/icons8-marker-24.png);
+	position: relative;
+	top: 7px;
+	right: 5px;
 }
 .footer-distributed .footer-center .phone p::before {
-content: url(../img/icons8-call-list-24.png);
-position: relative;
-top: 7px;
-right: 5px;
+	content: url(../img/icons8-call-list-24.png);
+	position: relative;
+	top: 7px;
+	right: 5px;
 }
 
 .footer-distributed .footer-center .mail p::before {
-content: url(../img/icons8-envelope-24.png);
-position: relative;
-top: 7px;
-right: 5px;
+	content: url(../img/icons8-envelope-24.png);
+	position: relative;
+	top: 7px;
+	right: 5px;
 }
 
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffffff;
-  font-weight:400;
-  vertical-align: middle;
-  margin:0;
+.footer-distributed .footer-center p {
+	display: inline-block;
+	color: #ffffff;
+	font-weight: 400;
+	vertical-align: middle;
+	margin: 0;
 }
 
-.footer-distributed .footer-center p span{
-  display:block;
-  font-weight: normal;
-  font-size:14px;
-  line-height:2;
+.footer-distributed .footer-center p span {
+	display: block;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 2;
 }
 
-.footer-distributed .footer-center p a{
-  color:  rgb(230, 238, 228);
-  text-decoration: none;;
+.footer-distributed .footer-center p a {
+	color: rgb(230, 238, 228);
+	text-decoration: none;
 }
-.footer-distributed .footer-center p a:hover{
-color:  rgb(179, 211, 171);
-text-decoration: none;;
+.footer-distributed .footer-center p a:hover {
+	color: rgb(179, 211, 171);
+	text-decoration: none;
 }
 
 .footer-distributed .footer-links a:before {
-content: "|";
-font-weight:300;
-font-size: 20px;
-left: 0;
-color: #fff;
-display: inline-block;
-padding-right: 5px;
+	content: "|";
+	font-weight: 300;
+	font-size: 20px;
+	left: 0;
+	color: #fff;
+	display: inline-block;
+	padding-right: 5px;
 }
 
 .footer-distributed .footer-links .link-1:before {
-content: none;
+	content: none;
 }
 
-
-.footer-distributed .footer-right{
-  width: 20%;
+.footer-distributed .footer-right {
+	width: 20%;
 }
 
 .footer-distributed .footer-right p {
-  color: whitesmoke;
+	color: whitesmoke;
 }
 
-
-
-.footer-distributed .footer-icons{
-  margin-top: 25px;
+.footer-distributed .footer-icons {
+	margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a{
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  border-radius: 2px;
+.footer-distributed .footer-icons a {
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	border-radius: 2px;
 
-  font-size: 20px;
-  color: #ffffff;
-  text-align: center;
-  line-height: 35px;
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
 
-  margin-right: 3px;
-  margin-bottom: 5px;
+	margin-right: 3px;
+	margin-bottom: 5px;
 }
 .footer-distributed .copyright-footer {
-  width: 100%;
-  padding: 30px 0;
-  background-color: rgba(255, 255, 255, 0.014);
+	width: 100%;
+	padding: 30px 0;
+	background-color: rgba(255, 255, 255, 0.014);
 }
 .footer-distributed .copyright-footer p {
-text-align: center;
-width: 50%;
-font-family: 'Courier New', Courier, monospace;
-margin: 0 auto;
-font-size: large;
+	text-align: center;
+	width: 50%;
+	font-family: "Courier New", Courier, monospace;
+	margin: 0 auto;
+	font-size: large;
 }
 
 @media (max-width: 880px) {
+	.footer-distributed {
+		font: bold 14px sans-serif;
+	}
 
-  .footer-distributed{
-      font: bold 14px sans-serif;
-  }
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-center,
+	.footer-distributed .footer-right {
+		display: block;
+		width: 100%;
+		margin-bottom: 40px;
+		text-align: center;
+	}
 
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-      display: block;
-      width: 100%;
-      margin-bottom: 40px;
-      text-align: center;
-  }
-
-  .footer-distributed .footer-center i{
-      margin-left: 0;
-  }
-
+	.footer-distributed .footer-center i {
+		margin-left: 0;
+	}
 }
-
