--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,7 @@
 /* Untuk Tablet */
 @media screen and (max-width: 1000px) {
 	.products {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
+		grid-template-columns: repeat(3, minmax(0, 1fr));
 	}
 	.product-content {
 		flex-wrap: wrap;
@@ -37,12 +37,16 @@
 	.heading h2 {
 		font-size: 20px;
 	}
+
+	.header-right {
+		display: none !important;
+	}
 }
 
 /* Untuk Smartphone */
 @media screen and (max-width: 600px) {
 	.products {
-		display: block;
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
 	.product {
